src/test/ui/tool-attributes/tool-attributes-shadowing.stderr
error[E0433]: failed to resolve: could not find `skip` in `dustfmt`
  --> $DIR/tool-attributes-shadowing.rs:3:12
   |
LL | #[dustfmt::skip]
   |            ^^^^ could not find `skip` in `dustfmt`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0433`.
