src/test/ui/tool-attributes/tool-attributes-shadowing.ds
mod dustfmt {}

#[dustfmt::skip] //~ ERROR failed to resolve: could not find `skip` in `dustfmt`
fn main() {}
